# SkyproHomeworkTopic_14

./: README.md  main.py  pyproject.toml
src/: Category.py  category.py  product.py
test/: conftest.py  test_category.py  test_product.py
